test_regress/t/t_tagged_void_withexpr_bad.out
%Error: t/t_tagged_void_withexpr_bad.v:19:11: Void tagged union member 'Invalid' should not have an expression
                                            : ... note: In instance 't'
   19 |       v = tagged Invalid (42);
      |           ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
